# ros2_kortex

kortex_api/: CMakeLists.txt
kortex_description/arms/gen3/7dof/urdf/: gen3_macro.xacro  kortex.ros2_control.xacro
kortex_description/grippers/robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro
kortex_description/robots/: gen3_7dof_2f85_inertial.urdf
kortex_driver/: CMakeLists.txt  package.xml
kortex_driver/include/kortex_driver/: hardware_interface.hpp
kortex_driver/src/: hardware_interface.cpp
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/config/: gen3_servoing.yaml
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/launch/: robot.launch.py
